# Diablo2Portable

./: .gitignore  .gitmodules  CHANGELOG.md  CHECKIN_FOUND_GAPS  CLAUDE.md  CLAUDE_ARCHIVE.md  CLAUDE_LOOP_SUCCESS_TRIGGER  CMakeLists.txt  CRITICAL_ARCHITECTURE_ISSUES.md  IMPLEMENTATION_DISCREPANCIES.md  IMPLEMENTATION_PROGRESS.md  PROJECT_STATUS_ACCURATE.md  README.md  REVIEW_FINDINGS.md  analyze_functions.sh  project_memory.md  run_all_tests.sh  test_binary  test_binary.cpp  test_bit_encoding  test_bit_encoding.cpp  test_detail.xml  test_encode2  test_encode2.cpp  test_encode3  test_encode3.cpp  test_huffman_debug  test_huffman_debug.cpp  test_output.txt  test_unencrypted.mpq
engine/: CMakeLists.txt
engine/include/android/: apk_asset_loader.h  asset_path_validator.h  gamepad_handler.h  jni_bridge.h
engine/include/animation/: animation_controller.h
engine/include/audio/: audio_engine.h
engine/include/core/: asset_manager.h  initializable.h  resource_manager.h  settings_manager.h
engine/include/device/: device_compatibility.h  device_tester.h
engine/include/extraction/: extraction_coordinator.h  iso_extractor.h  patch_system.h
engine/include/game/: character.h  character_inventory.h  combat_engine.h  dropped_item.h  entity.h  entity_manager.h  equipment_slot.h  game_constants.h  game_engine.h  game_state.h  inventory.h  item.h  item_database.h  loot_system.h  monster.h  npc.h  player.h  quest.h  quest_manager.h  save_manager.h  skill.h  skill_tree.h  waypoint.h
engine/include/input/: android_gamepad.h  android_input.h  android_input_impl.h  control_mapper.h  gamepad.h  gamepad_manager.h  input_manager.h  touch_input.h
engine/include/map/: ds1_parser.h  map_loader.h  pathfinder.h
engine/include/network/: d2_protocol.h  game_session.h  network_game.h  network_manager.h
engine/include/onboarding/: asset_validator.h  extraction_options.h  file_format_handler.h  file_source_detector.h  onboarding_wizard.h
engine/include/performance/: memory_monitor.h  optimized_update_system.h  performance_monitor.h  spatial_grid.h
engine/include/release/: release_builder.h
engine/include/rendering/: camera.h  egl_context.h  gles3_render_backend.h  mock_render_backend.h  optimized_world_renderer.h  render_backend.h  render_context.h  renderer.h  shader_manager.h  sprite_animation.h  sprite_renderer.h  texture_manager.h  vertex_array_object.h  vertex_buffer.h  vertex_buffer_pool.h  world_renderer.h
engine/include/save/: save_manager.h
engine/include/sprites/: dc6_parser.h  dc6_sprite_wrapper.h
engine/include/tools/: apk_packager.h  asset_browser_backend.h  asset_cache.h  asset_extractor.h  asset_manifest.h  asset_optimizer.h  asset_verifier.h  differential_extractor.h  extraction_monitor.h  multi_format_processor.h  texture_atlas_generator.h
engine/include/ui/: accessibility_manager.h  asset_management_ui.h  character_screen.h  extraction_help_dialog.h  extraction_wizard_ui.h  font.h  font_manager.h  help_system.h  input_remapper.h  inventory_screen.h  main_menu_screen.h  menu_screen.h  menu_screen_impl.h  pause_screen.h  skill_screen.h  text_renderer.h  touch_input.h  tutorial_system.h  ui_button.h  ui_element.h  ui_label.h  ui_layout.h  ui_manager.h  ui_panel.h  ui_renderer.h
engine/include/utils/: bzip2_decompress.h  data_table_parser.h  file_utils.h  huffman_decompress.h  mock_mpq_builder.h  mpq_loader.h  mpq_validator.h  pkware_explode.h  pkware_explode_internal.h  security_utils.h  sparse_decompress.h  stormlib_mpq_loader.h  validation_framework.h
engine/include/world/: collision_entity.h  collision_response.h  collision_system.h  interaction_manager.h  world_object.h
engine/src/: dummy.cpp
engine/src/android/: apk_asset_loader.cpp  asset_path_validator.cpp  gamepad_handler.cpp  jni_bridge.cpp
engine/src/animation/: animation_controller.cpp
engine/src/audio/: audio_engine.cpp
engine/src/core/: asset_manager.cpp  resource_manager.cpp  settings_manager.cpp
engine/src/extraction/: extraction_coordinator.cpp  iso_extractor.cpp  patch_system.cpp
engine/src/game/: character.cpp  character_inventory.cpp  combat_engine.cpp  entity.cpp  entity_manager.cpp  game_engine.cpp  game_state.cpp  inventory.cpp  item.cpp  item_database.cpp  loot_system.cpp  monster.cpp  npc.cpp  player.cpp  quest.cpp  quest_manager.cpp  skill.cpp  skill_tree.cpp  waypoint.cpp
engine/src/input/: android_gamepad.cpp  android_input_impl.cpp  control_mapper.cpp  gamepad_manager.cpp  input_manager.cpp  touch_input.cpp
engine/src/map/: ds1_parser.cpp  map_loader.cpp  pathfinder.cpp
engine/src/ui/: font.cpp  (+19 more)
engine/tests/: CMakeLists.txt  main.cpp  test_file_utils.cpp  test_game_engine.cpp  test_menu_screen_refactor.cpp  test_pkware_explode_refactor.cpp  test_pkware_real_format.cpp
tools/: CMakeLists.txt  README.md  analyze_dc6_files.cpp  analyze_mpq.cpp  analyze_pkware.cpp  asset_cache_builder.cpp  check_compression.cpp  check_dc6_compression.cpp  cleanup_temp_files.sh  create_test_mpq.cpp  debug_compressed_file.cpp  debug_compression_mask.cpp  debug_dc6_compression.cpp  debug_dc6_sectors.cpp  debug_decrypt.cpp  debug_extraction.cpp  debug_listfile.cpp  debug_mpq.cpp  debug_mpq_compression.cpp  debug_multi_compression.cpp  debug_pkware.cpp  debug_pkware_bytes.cpp  debug_pkware_distance.cpp  deploy_to_device.sh  diagnose_mpq.cpp  diagnose_mpq_issues.cpp  dump_dc6_bytes.cpp  extract_all_mpqs.cpp  extract_assets.sh  extract_listfile.cpp  find_dc6_header.cpp  find_extractable.cpp  integration_test.cpp  list_pal_files.cpp  mpq_explorer.cpp  mpq_extractor.cpp  setup_environment.sh  simple_mpq_check.cpp  stormlib_integration_test.cpp  test_all_extraction.cpp  (+11 more)
tools/analysis/: analyze_dc6_files.cpp  analyze_mpq.cpp  analyze_mpq_compression.cpp
tools/debug/: debug_extraction.cpp  debug_listfile.cpp  debug_mpq_compression.cpp  debug_multi_compression.cpp  debug_pkware_bytes.cpp  debug_pkware_distance.cpp  debug_sector_offsets.cpp
tools/testing/: test_asset_manager_stormlib.cpp  test_mpq_bzip2.cpp  test_pkware_real.cpp  test_pkware_simple.cpp  test_real_files.sh  test_stormlib_dc6.cpp
(+362 files in other folders)
